--- a/services/templates/services/trainers-details.html
+++ b/services/templates/services/trainers-details.html
@@ -119,21 +119,21 @@
                     <div class="choose-item">
                         <div class="chart" data-percent="{{ trainers.skill1_level }}"><span>{{ trainers.skill1_level }}%</span></div>
                         <h4 class="title">{{ trainers.skill1|upper }}</h4>
-                        <p>{{ trainers.skill1_descr|safe }}.</p>
+                        <!-- <p>{{ trainers.skill1_descr|safe }}.</p> -->
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
                     <div class="choose-item">
                       <div class="chart" data-percent="{{ trainers.skill2_level }}"><span>{{ trainers.skill2_level }}%</span></div>
                       <h4 class="title">{{ trainers.skill2|upper }}</h4>
-                      <p>{{ trainers.skill2_descr|safe }}.</p>
+                      <!-- <p>{{ trainers.skill2_descr|safe }}.</p> -->
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-30">
                     <div class="choose-item">
                       <div class="chart" data-percent="{{ trainers.skill1_level }}"><span>{{ trainers.skill3_level }}%</span></div>
                       <h4 class="title">{{ trainers.skill3|upper }}</h4>
-                      <p>{{ trainers.skill3_descr|safe }}.</p>
+                      <!-- <p>{{ trainers.skill3_descr|safe }}.</p> -->
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                                     <h3 class="odo-title odometer" data-odometer-final="{{ trainers.nr_students }}">0</h3>
                                     <h3 class="title">+</h3>
                                 </div>
-                                <p>{% trans 'Fact 1' %}</p>
+                                <p>{% trans 'Hours of training' %}</p>
                             </div>
                         </div>
                     </div>
