--- a/services/templates/services/event.html
+++ b/services/templates/services/event.html
@@ -54,7 +54,7 @@
         </div>
         {% if user.is_authenticated %}
         <div class="add-content">
-            <a class="" target="_blank" href="{% url 'admin:index' %}services/gallery"><i class="fas fa-plus-circle" style="font-size:80px"></i></a>
+            <a class="" target="_blank" href="{% url 'admin:index' %}services/event"><i class="fas fa-plus-circle" style="font-size:80px"></i></a>
         </div>
         {% endif %}
         <div class="gallery-filter-wrapper">
