--- a/services/templates/services/faq.html
+++ b/services/templates/services/faq.html
@@ -88,7 +88,7 @@
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-30">
                                         <div class="faq-inner-thumb">
-                                            <img src="{% static 'images/training/training-4.webp' %}" alt="faq">
+                                            <img src="{% static 'images/training/culori_centuri.jpg' %}" alt="faq">
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 mb-30">
